[Geoloc] affichage de la map

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -102,14 +102,22 @@ h1 {
     50% { opacity: 0.4; }
     to { opacity: 1.0; }
 }
- 
+
 @-webkit-keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
     to { opacity: 1.0; }
 }
- 
+
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+#eventsMap {
+    width: 95%;
+    height: 250px;
+    display: block;
+    margin: 5px auto;
+    position: relative;
 }
