--- a/platforms/ios/www/templates/camera.html
+++ b/platforms/ios/www/templates/camera.html
@@ -3,6 +3,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Camera</h1>
+    <button ng-click="takePicture" class="button button-block button-calm">Prendre une photo</button>
+    <img id="picture" src="{{imageURI}}">
   </ion-content>
 </ion-view>
