--- a/platforms/ios/www/templates/events.html
+++ b/platforms/ios/www/templates/events.html
@@ -3,7 +3,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
-      <button class="button button-icon icon ion-navigate" ng-click="centreOnMe()">
+      <button class="button button-icon icon ion-location" ng-click="centreOnMe()">
         Find Me
       </button>
     </ion-nav-buttons>
