--- a/www/templates/invite.html
+++ b/www/templates/invite.html
@@ -1,9 +1,9 @@
-<ion-view title="Camera">
+<ion-view title="Invite">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <button ng-click="takePicture" class="button button-block button-calm">Prendre une photo</button>
-    <img id="picture" src="{{imageURI}}">
+    <button class="button button-block button-positive" ng-click="chooseContact()">Get all contacts</button>
+    <p id="contacts"></p>
   </ion-content>
 </ion-view>
