--- a/platforms/android/assets/www/templates/camera.html
+++ b/platforms/android/assets/www/templates/camera.html
@@ -3,7 +3,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <button ng-click='takePicture()' class="button button-block button-calm">Prendre une photo</button>
-    <img src="{{imgsrc}}">
+    <button ng-click="takePicture()" class="button button-block button-calm">Prendre une photo</button>
+    <img id="picture" src="{{imageURI}}">
   </ion-content>
 </ion-view>
