--- a/platforms/ios/www/templates/invite.html
+++ b/platforms/ios/www/templates/invite.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="card">
-      <div class="item item-text-wrap" ng-repeat="contact in contacts | orderBy:contact.name">
+      <div class="item item-text-wrap" ng-repeat="contact in contacts | orderBy:'name'">
         <p>Name : {{contact.name}}</p>
         <p>Email : {{contact.email}}</p>
         <p>Téléphone : {{contact.phoneNumber}}</p>
