--- a/platforms/ios/www/templates/events.html
+++ b/platforms/ios/www/templates/events.html
@@ -1,11 +1,9 @@
-<ion-view title="Soirées">
+<ion-view title="Shake ton BDE">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
-      <button class="button button-icon icon ion-location" ng-click="centreOnMe()">
-        Find Me
-      </button>
+      <button class="button button-icon icon ion-location" ng-click="centreOnMe()"></button>
     </ion-nav-buttons>
   <ion-content class="has-header" scroll="false">
     <div id="map"></div>
