--- a/platforms/ios/www/templates/camera.html
+++ b/platforms/ios/www/templates/camera.html
@@ -3,7 +3,9 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <button ng-click="takePicture()" class="button button-block button-calm">Prendre une photo</button>
     <img id="picture" src="{{imageURI}}">
   </ion-content>
+  <div class="bar bar-footer bar-positive" ng-click="takePicture()">
+    <div class="title"><i class="icon ion-camera"></i> Shoote tes potes</div>
+  </div>
 </ion-view>
