temp commit to demo

--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -37,5 +37,6 @@
     </feature>
     <feature name="Globalization">
         <param name="android-package" value="org.apache.cordova.globalization.Globalization" />
+        <param name="ios-package" value="CDVGlobalization" />
     </feature>
 </widget>
