--- a/www/templates/camera.html
+++ b/www/templates/camera.html
@@ -3,7 +3,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <img id="picture" src="{{imageURI}}">
+    <img id="picture" src="{{imageURI}}" width="300px">
   </ion-content>
   <div class="bar bar-footer bar-positive" ng-click="takePicture()">
     <div class="title"><i class="icon ion-camera"></i> Shoote tes potes</div>
