--- a/www/templates/camera.html
+++ b/www/templates/camera.html
@@ -3,7 +3,19 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <img id="picture" src="{{imageURI}}" width="300px">
+
+    <div class="list card" ng-show="{{imageURI}}">
+      <div class="item item-body">
+        <img class="full-image"  src="{{imageURI}}">
+      </div>
+      <div class="item tabs tabs-secondary tabs-icon-left">
+        <a class="tab-item" href="#" ng-click="shareFB()">
+          <i class="icon ion-share"></i>
+          Share
+        </a>
+      </div>
+    </div>
+
   </ion-content>
   <div class="bar bar-footer bar-positive" ng-click="takePicture()">
     <div class="title"><i class="icon ion-camera"></i> Shoote tes potes</div>
