--- a/www/templates/camera.html
+++ b/www/templates/camera.html
@@ -4,12 +4,12 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
 
-    <div class="list card" ng-show="{{imageURI}}">
+    <div class="list card" >
       <div class="item item-body">
         <img class="full-image"  src="{{imageURI}}">
       </div>
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#" ng-click="shareFB()">
+        <a class="tab-item" href="#" ng-click="share()">
           <i class="icon ion-share"></i>
           Share
         </a>
