--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -8,7 +8,7 @@
   <ion-content class="has-header" scroll="false">
     <div id="map"></div>
     <ion-list>
-      <ion-item ng-repeat="event in events" href="#/app/events/{{event.id}}" id="event-{{event.id}}">
+      <ion-item ng-repeat="event in events" href="#/app/events/{{event.id}}" id="event-{{event.id}}" analytics-on="click" analytics-event="GoToEvent">
         {{event.name}}
       </ion-item>
     </ion-list>
