--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -77,3 +77,15 @@ h1.title.ng-binding {
   -webkit-animation: anim-rotate 1s infinite steps(12);
   animation: anim-rotate 1s infinite steps(12);
 }
+
+.contactShow .invisible {
+  visibility: visible;
+  z-index: 2;
+  position:static;
+  text-align: center;
+}
+
+.contactShow .contactButton {
+  width: 33%;
+  margin: auto;
+}
