--- a/platforms/android/assets/www/templates/camera.html
+++ b/platforms/android/assets/www/templates/camera.html
@@ -4,9 +4,9 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
 
-    <div class="list card" >
+    <div class="list card" ng-show="isImageURI">
       <div class="item item-body">
-        <img class="full-image"  src="{{imageURI}}">
+        <img class="full-image" src="{{imageURI}}">
       </div>
       <div class="item tabs tabs-secondary tabs-icon-left">
         <a class="tab-item" href="#" ng-click="share()">
@@ -17,7 +17,7 @@
     </div>
 
   </ion-content>
-  <div class="bar bar-footer bar-positive" ng-click="takePicture()">
+  <div class="bar bar-footer bar-positive take-picture" ng-click="takePhoto()">
     <div class="title"><i class="icon ion-camera"></i> Shoote tes potes</div>
   </div>
 </ion-view>
