--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,8 +13,13 @@ h1.title.ng-binding {
   right: 0 !important;
 }
 
-#picture {
+.take-picture {
+  height: 65px;
+}
 
+.take-picture .title {
+  line-height: 65px;
+  font-size: 22px;
 }
 
 @font-face {
