--- a/www/templates/camera.html
+++ b/www/templates/camera.html
@@ -1,23 +1,18 @@
-<ion-view title="Camera">
+<ion-view title="Shoote tes potes !">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
-
+  <ion-nav-buttons side="right">
+    <button class="button button-icon icon ion-share" ng-click="sharePhoto()"></button>
+  </ion-nav-buttons>
+  <ion-content class="has-header" scroll="false">
     <div class="list card" ng-show="isImageURI">
       <div class="item item-body">
         <img class="full-image" src="{{imageURI}}">
       </div>
-      <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#" ng-click="share()">
-          <i class="icon ion-share"></i>
-          Share
-        </a>
-      </div>
     </div>
-
   </ion-content>
   <div class="bar bar-footer bar-positive take-picture" ng-click="takePhoto()">
-    <div class="title"><i class="icon ion-camera"></i> Shoote tes potes</div>
+    <div class="title"><i class="icon ion-camera"></i> Shoote tes potes !</div>
   </div>
 </ion-view>
