--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -17,7 +17,7 @@
           Trouver les soirées
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/camera">
-          Publier une photo
+          Shoote tes potes !
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/invite">
           Inviter mes potes
