--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -1,26 +1,26 @@
 <ion-side-menus>
 
   <ion-pane ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button class="button-clear"><i class="icon ion-chevron-left"></i></ion-nav-back-button>
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-stable">
+    <header class="bar bar-header bar-positive">
       <h1 class="title">Menu</h1>
     </header>
     <ion-content class="has-header">
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/events">
-          Trouver les soirées
+          <i class="icon ion-home"></i> Home
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/camera">
-          Shoote tes potes !
+          <i class="icon ion-camera"></i> Shoote tes potes !
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/invite">
-          Inviter mes potes
+          <i class="icon ion-person-stalker"></i> Inviter mes potes
         </ion-item>
       </ion-list>
     </ion-content>
