--- a/platforms/ios/www/templates/invite.html
+++ b/platforms/ios/www/templates/invite.html
@@ -3,13 +3,19 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <ion-list class="list">
-      <ion-item ng-show="{{contact.name && contact.phoneNumber}}" class="item item-text-wrap contactShow" can-swipe="true" ng-repeat="contact in contacts | orderBy:'name'">
-        <p>{{contact.name}}</p>
-        <ion-option-button class="button-calm contactButton" ng-show="{{contact.phoneNumber}}" ng-click="invite(1)">SMS</ion-option-button>
-       <!-- <ion-option-button class="button-assertive contactButton" ng-show="{{contact.email}}" ng-click="invite(2)">EMAIL</ion-option-button>-->
+    <ul class="list">
+      <li ng-show="contact.name && contact.phoneNumber" class="item item-checkbox" ng-repeat="contact in contacts | orderBy:'name'">
+        <label class="checkbox">
+          <input type="checkbox" ng-model="contact.name" ng-true-value="contact.phoneNumber" ng-false-value="">
+        <!--<ion-option-button class="button-calm contactButton" ng-show="{{contact.phoneNumber}}" ng-click="invite(1, contact.phoneNumber)">SMS</ion-option-button>-->
+        <!-- <ion-option-button class="button-assertive contactButton" ng-show="{{contact.email}}" ng-click="invite(2)">EMAIL</ion-option-button>-->
         <!--<ion-option-button class="button-calm contactButton" ng-show="{{contact.facebook}}">FB</ion-option-button>-->
-      </ion-item>
-    </ion-list>
+        </label>
+        {{contact.name}}
+      </li>
+    </ul>
+    <button class="button button-positive" ng-click="invite()">
+      SMS
+    </button>
   </ion-content>
 </ion-view>
