--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,7 +8,8 @@
   </ion-pane>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-stable">
+    <header class="bar bar-header bar-dark">
+      <button class="button button-icon icon ion-ios7-gear-outline" ng-click="openSettings()"></button>
       <h1 class="title" translate>Menu</h1>
     </header>
     <ion-content class="has-header">
