--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -9,6 +9,7 @@
 
   <ion-side-menu side="left">
     <header class="bar bar-header bar-stable">
+      <button class="button button-icon icon ion-ios7-gear-outline" ng-click="openSettings()"></button>
       <h1 class="title" translate>Menu</h1>
     </header>
     <ion-content class="has-header">
