--- a/platforms/android/assets/www/templates/camera.html
+++ b/platforms/android/assets/www/templates/camera.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   </ion-content>
-  <div class="bar bar-footer bar-positive" ng-click="takePicture()">
+  <div class="bar bar-footer bar-positive" ng-click="takePhoto()">
     <div class="title"><i class="icon ion-camera"></i> <span translate>Shoot your friends!</span></div>
   </div>
 </ion-view>
