--- a/platforms/ios/www/templates/invite.html
+++ b/platforms/ios/www/templates/invite.html
@@ -2,14 +2,17 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <button class="button button-icon icon ion-paper-airplane" ng-click="invite()" translate></button>
+  </ion-nav-buttons>
   <ion-content class="has-header">
-    <div class="card">
-      <div class="item item-text-wrap" ng-repeat="contact in contacts | orderBy:'name'">
-        <p><span translate>Name:</span> {{contact.name}}</p>
-        <p><span translate>Email:</span> {{contact.email}}</p>
-        <p><span translate>Phone:</span> {{contact.phoneNumber}}</p>
-        <p><span translate>Facebook:</span> {{contact.facebook}}</p>
-      </div>
-    </div>
+    <ul class="list">
+      <li ng-show="contact.name && contact.phoneNumber" class="item item-checkbox" ng-repeat="contact in contacts | orderBy:'name'">
+        <label class="checkbox">
+          <input type="checkbox" ng-model="contact.checked">
+        </label>
+        {{contact.name}}
+      </li>
+    </ul>
   </ion-content>
 </ion-view>
